--- a/archives/toutiao-search/2023-11-06.md
+++ b/archives/toutiao-search/2023-11-06.md
@@ -1,57 +1,73 @@
 # 2023-11-06
 
-共 191 条
+共 205 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 06 2023 10:18:08 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 06 2023 11:00:41 GMT+0800 (China Standard Time) -->
+1. [父子俩5.2元购入汽油6.7元出售](https://so.toutiao.com/search?keyword=父子俩5.2元购入汽油6.7元出售)
 1. [直击东北多地暴雪现场](https://so.toutiao.com/search?keyword=直击东北多地暴雪现场)
-1. [韩国将暂时禁止股票卖空](https://so.toutiao.com/search?keyword=韩国将暂时禁止股票卖空)
 1. [第六届中国国际进口博览会开幕](https://so.toutiao.com/search?keyword=第六届中国国际进口博览会开幕)
-1. [中央气象台：这次暴雪极端性相当强](https://so.toutiao.com/search?keyword=中央气象台：这次暴雪极端性相当强)
 1. [乌军举行颁奖仪式俄军导弹从天而降](https://so.toutiao.com/search?keyword=乌军举行颁奖仪式俄军导弹从天而降)
-1. [脚踢警察女子被采取刑事强制措施](https://so.toutiao.com/search?keyword=脚踢警察女子被采取刑事强制措施)
+1. [中央气象台：这次暴雪极端性相当强](https://so.toutiao.com/search?keyword=中央气象台：这次暴雪极端性相当强)
+1. [韩国将暂时禁止股票卖空](https://so.toutiao.com/search?keyword=韩国将暂时禁止股票卖空)
+1. [北京今日零时已启动供暖](https://so.toutiao.com/search?keyword=北京今日零时已启动供暖)
 1. [中央气象台三预警齐发](https://so.toutiao.com/search?keyword=中央气象台三预警齐发)
 1. [万科拟于今日与金融机构召开会议](https://so.toutiao.com/search?keyword=万科拟于今日与金融机构召开会议)
-1. [LNG被零封](https://so.toutiao.com/search?keyword=LNG被零封)
-1. [何小鹏喊话“不知道他急什么”](https://so.toutiao.com/search?keyword=何小鹏喊话“不知道他急什么”)
-1. [李显龙宣布交棒时间](https://so.toutiao.com/search?keyword=李显龙宣布交棒时间)
-1. [美团外卖辟谣45岁以上骑手不再派单](https://so.toutiao.com/search?keyword=美团外卖辟谣45岁以上骑手不再派单)
-1. [中国战地女记者陈慧慧已成功撤离](https://so.toutiao.com/search?keyword=中国战地女记者陈慧慧已成功撤离)
-1. [福原爱或面临2年以上有期徒刑](https://so.toutiao.com/search?keyword=福原爱或面临2年以上有期徒刑)
-1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
 1. [女子在足疗店按摩遭男技师猥亵](https://so.toutiao.com/search?keyword=女子在足疗店按摩遭男技师猥亵)
+1. [脚踢警察女子被采取刑事强制措施](https://so.toutiao.com/search?keyword=脚踢警察女子被采取刑事强制措施)
+1. [美团外卖辟谣45岁以上骑手不再派单](https://so.toutiao.com/search?keyword=美团外卖辟谣45岁以上骑手不再派单)
+1. [LNG被零封](https://so.toutiao.com/search?keyword=LNG被零封)
+1. [记者采访烂尾楼遭开发商野蛮谩骂](https://so.toutiao.com/search?keyword=记者采访烂尾楼遭开发商野蛮谩骂)
+1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
+1. [福原爱或面临2年以上有期徒刑](https://so.toutiao.com/search?keyword=福原爱或面临2年以上有期徒刑)
 1. [当过9年县委书记的她受贿3376万](https://so.toutiao.com/search?keyword=当过9年县委书记的她受贿3376万)
-1. [如何看待余承东深夜发文内涵何小鹏](https://so.toutiao.com/search?keyword=如何看待余承东深夜发文内涵何小鹏)
-1. [澳总理在进博会参观澳企展台](https://so.toutiao.com/search?keyword=澳总理在进博会参观澳企展台)
-1. [干部和商人围坐诈金花？官方调查](https://so.toutiao.com/search?keyword=干部和商人围坐诈金花？官方调查)
+1. [李显龙宣布交棒时间](https://so.toutiao.com/search?keyword=李显龙宣布交棒时间)
+1. [落马官员称最难释怀儿时赤脚求学](https://so.toutiao.com/search?keyword=落马官员称最难释怀儿时赤脚求学)
+1. [长春一医院上空现大量鸟群盘旋](https://so.toutiao.com/search?keyword=长春一医院上空现大量鸟群盘旋)
 1. [以防长：将消灭哈马斯在加沙领导人](https://so.toutiao.com/search?keyword=以防长：将消灭哈马斯在加沙领导人)
+1. [美媒：拜登竞选团队被巴以冲突搅乱](https://so.toutiao.com/search?keyword=美媒：拜登竞选团队被巴以冲突搅乱)
 1. [公职人员猥亵女孩行拘9天纪委介入](https://so.toutiao.com/search?keyword=公职人员猥亵女孩行拘9天纪委介入)
-1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
+1. [救护车被袭击后 加沙疏散行动暂停](https://so.toutiao.com/search?keyword=救护车被袭击后+加沙疏散行动暂停)
 1. [美媒：拜登政府的中东政策彻底失败](https://so.toutiao.com/search?keyword=美媒：拜登政府的中东政策彻底失败)
+1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
+1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
+1. [专家：布林肯四访中东不是去灭火的](https://so.toutiao.com/search?keyword=专家：布林肯四访中东不是去灭火的)
+1. [助学金事件结果已出 当事人：我输了](https://so.toutiao.com/search?keyword=助学金事件结果已出+当事人：我输了)
+1. [如何看待余承东深夜发文内涵何小鹏](https://so.toutiao.com/search?keyword=如何看待余承东深夜发文内涵何小鹏)
+1. [乘客擅自操作飞机舱门手柄被刑拘](https://so.toutiao.com/search?keyword=乘客擅自操作飞机舱门手柄被刑拘)
+1. [法国向加沙运送救援物资](https://so.toutiao.com/search?keyword=法国向加沙运送救援物资)
+1. [何小鹏喊话“不知道他急什么”](https://so.toutiao.com/search?keyword=何小鹏喊话“不知道他急什么”)
+1. [乌军宣布摧毁一艘俄海军舰艇](https://so.toutiao.com/search?keyword=乌军宣布摧毁一艘俄海军舰艇)
+1. [中方坚决反对日单方面启动核污排海](https://so.toutiao.com/search?keyword=中方坚决反对日单方面启动核污排海)
+1. [黎一民用车辆遭以无人机袭击致4死](https://so.toutiao.com/search?keyword=黎一民用车辆遭以无人机袭击致4死)
+1. [干部和商人围坐诈金花？官方调查](https://so.toutiao.com/search?keyword=干部和商人围坐诈金花？官方调查)
+1. [A股开盘：三大指数集体高开](https://so.toutiao.com/search?keyword=A股开盘：三大指数集体高开)
+1. [以军一小时内对加沙发动数百次空袭](https://so.toutiao.com/search?keyword=以军一小时内对加沙发动数百次空袭)
+1. [曝菲律宾总统将访问美军印太司令部](https://so.toutiao.com/search?keyword=曝菲律宾总统将访问美军印太司令部)
+1. [女子手指被丈夫2根头发扎出血](https://so.toutiao.com/search?keyword=女子手指被丈夫2根头发扎出血)
+1. [超20名以士兵在加沙地带遭伏击身亡](https://so.toutiao.com/search?keyword=超20名以士兵在加沙地带遭伏击身亡)
+1. [台黑帮头目向好友炫枪时将自己打死](https://so.toutiao.com/search?keyword=台黑帮头目向好友炫枪时将自己打死)
+1. [蓝佛安新闻联播发声谈万亿国债](https://so.toutiao.com/search?keyword=蓝佛安新闻联播发声谈万亿国债)
+1. [以色列警察为何对记者动手](https://so.toutiao.com/search?keyword=以色列警察为何对记者动手)
+1. [中国战地女记者陈慧慧已成功撤离](https://so.toutiao.com/search?keyword=中国战地女记者陈慧慧已成功撤离)
+1. [普京回答男孩“我目前还是普京”](https://so.toutiao.com/search?keyword=普京回答男孩“我目前还是普京”)
+1. [两周内两次挑衅 加拿大意欲何为](https://so.toutiao.com/search?keyword=两周内两次挑衅+加拿大意欲何为)
+1. [美韩演练打击“朝最高领导人住所”](https://so.toutiao.com/search?keyword=美韩演练打击“朝最高领导人住所”)
+1. [女子景点丢垃圾摆拍 路人愤而质问](https://so.toutiao.com/search?keyword=女子景点丢垃圾摆拍+路人愤而质问)
+1. [澳总理在进博会参观澳企展台](https://so.toutiao.com/search?keyword=澳总理在进博会参观澳企展台)
 1. [以色列北部中部响起防空警报](https://so.toutiao.com/search?keyword=以色列北部中部响起防空警报)
-1. [北京今日零时已启动供暖](https://so.toutiao.com/search?keyword=北京今日零时已启动供暖)
 1. [华盛顿数万人抗议援助以色列](https://so.toutiao.com/search?keyword=华盛顿数万人抗议援助以色列)
 1. [媒体评村民因“聚餐”被查](https://so.toutiao.com/search?keyword=媒体评村民因“聚餐”被查)
-1. [台黑帮头目向好友炫枪时将自己打死](https://so.toutiao.com/search?keyword=台黑帮头目向好友炫枪时将自己打死)
 1. [巴方：不会允许加沙人被强制迁移](https://so.toutiao.com/search?keyword=巴方：不会允许加沙人被强制迁移)
-1. [蓝佛安新闻联播发声谈万亿国债](https://so.toutiao.com/search?keyword=蓝佛安新闻联播发声谈万亿国债)
-1. [女子景点丢垃圾摆拍 路人愤而质问](https://so.toutiao.com/search?keyword=女子景点丢垃圾摆拍+路人愤而质问)
-1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
 1. [缅北电诈男子：有金子都不会再去了](https://so.toutiao.com/search?keyword=缅北电诈男子：有金子都不会再去了)
-1. [普京回答男孩“我目前还是普京”](https://so.toutiao.com/search?keyword=普京回答男孩“我目前还是普京”)
 1. [巴以冲突存在核选项？以总理澄清](https://so.toutiao.com/search?keyword=巴以冲突存在核选项？以总理澄清)
 1. [预计我国今年将迎“暖冬”](https://so.toutiao.com/search?keyword=预计我国今年将迎“暖冬”)
 1. [大国重器上架淘宝释放了什么信号](https://so.toutiao.com/search?keyword=大国重器上架淘宝释放了什么信号)
-1. [专家：布林肯四访中东不是去灭火的](https://so.toutiao.com/search?keyword=专家：布林肯四访中东不是去灭火的)
 1. [马斯克谈蔚来裁员：他们日子不好过](https://so.toutiao.com/search?keyword=马斯克谈蔚来裁员：他们日子不好过)
-1. [女子手指被丈夫2根头发扎出血](https://so.toutiao.com/search?keyword=女子手指被丈夫2根头发扎出血)
 1. [巴以冲突已致双方超11300人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超11300人死亡)
 1. [外媒：中澳关系出现令人惊讶的逆转](https://so.toutiao.com/search?keyword=外媒：中澳关系出现令人惊讶的逆转)
-1. [乌军宣布摧毁一艘俄海军舰艇](https://so.toutiao.com/search?keyword=乌军宣布摧毁一艘俄海军舰艇)
-1. [长春一医院上空现大量鸟群盘旋](https://so.toutiao.com/search?keyword=长春一医院上空现大量鸟群盘旋)
 1. [皇马本赛季12胜 7场靠贝林厄姆进球](https://so.toutiao.com/search?keyword=皇马本赛季12胜+7场靠贝林厄姆进球)
 1. [意甲：罗马2-1逆转莱切](https://so.toutiao.com/search?keyword=意甲：罗马2-1逆转莱切)
-1. [乘客擅自操作飞机舱门手柄被刑拘](https://so.toutiao.com/search?keyword=乘客擅自操作飞机舱门手柄被刑拘)
 1. [《中国乒乓》剧组厦门再同框](https://so.toutiao.com/search?keyword=《中国乒乓》剧组厦门再同框)
 1. [媒体：进博会让合作共赢惠及世界](https://so.toutiao.com/search?keyword=媒体：进博会让合作共赢惠及世界)
 1. [东北这次强降雪下到发紫](https://so.toutiao.com/search?keyword=东北这次强降雪下到发紫)
@@ -151,7 +167,6 @@
 1. [寒潮暴雪复杂天气形势该如何应对](https://so.toutiao.com/search?keyword=寒潮暴雪复杂天气形势该如何应对)
 1. [美国与阿拉伯国家对呼吁停火存分歧](https://so.toutiao.com/search?keyword=美国与阿拉伯国家对呼吁停火存分歧)
 1. [以色列袭击加沙圣城医院附近建筑](https://so.toutiao.com/search?keyword=以色列袭击加沙圣城医院附近建筑)
-1. [美韩演练打击“朝最高领导人住所”](https://so.toutiao.com/search?keyword=美韩演练打击“朝最高领导人住所”)
 1. [尼加拉瓜代表团：对进博会充满期待](https://so.toutiao.com/search?keyword=尼加拉瓜代表团：对进博会充满期待)
 1. [布林肯将首访约旦河西岸会见巴总统](https://so.toutiao.com/search?keyword=布林肯将首访约旦河西岸会见巴总统)
 1. [哈马斯：加沙居民饮用水极度缺乏](https://so.toutiao.com/search?keyword=哈马斯：加沙居民饮用水极度缺乏)
@@ -163,7 +178,6 @@
 1. [业内：年底前A股大概率有一波机会](https://so.toutiao.com/search?keyword=业内：年底前A股大概率有一波机会)
 1. [妇女儿童成为巴以冲突最大受害者](https://so.toutiao.com/search?keyword=妇女儿童成为巴以冲突最大受害者)
 1. [东北多地启动暴雪响应 多趟列车停运](https://so.toutiao.com/search?keyword=东北多地启动暴雪响应+多趟列车停运)
-1. [美媒：拜登竞选团队被巴以冲突搅乱](https://so.toutiao.com/search?keyword=美媒：拜登竞选团队被巴以冲突搅乱)
 1. [首届学青会共1.8万余名运动员参赛](https://so.toutiao.com/search?keyword=首届学青会共1.8万余名运动员参赛)
 1. [广东揭阳多车碰撞致1死9伤](https://so.toutiao.com/search?keyword=广东揭阳多车碰撞致1死9伤)
 1. [女子全麻术后被好友轮流拿喇叭叫醒](https://so.toutiao.com/search?keyword=女子全麻术后被好友轮流拿喇叭叫醒)
